src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (peek it_sums_tuple_backtracking).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::test_peek::<(Rep<(Punct, Punct, Ident, Ident)>, Punct)>(q.clone())"
---
Some(
    9,
)
