src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__it_fails_2_types.snap
---
source: src/type_atoms/adt/tuple.rs
expression: "(insta_match_test!(+ parse (Ident, Ident) : hello *),\n    insta_match_test!(* peek (Ident, Ident) : hello *))"
---
(
    Err(
        Error(
            "Expected ident",
        ),
    ),
    None,
)
