src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__it_matches_2_tuple.snap
---
source: src/type_atoms/adt/tuple.rs
expression: "(insta_match_test!(+ parse (Ident, FIdent<\"world\">) : hello world),\n    insta_match_test!(* peek (Ident, FIdent<\"world\">) : hello world))"
---
(
    Ok(
        (
            Ident(
                hello,
            ),
            FIdent(
                Span,
            ),
        ),
    ),
    Some(
        2,
    ),
)
