src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__it_only_steps_back_on_fail_for_options.snap
---
source: src/type_atoms/adt/tuple.rs
expression: "(insta_match_test!(+ parse (Option<Ident>, Option<Punct>) : hi),\n    insta_match_test!(* peek (Option<Ident>, Option<Punct>) : hi))"
---
(
    Ok(
        (
            Some(
                Ident(
                    hi,
                ),
            ),
            None,
        ),
    ),
    Some(
        1,
    ),
)
