src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__it_steps_back_for_multi_tuples.snap
---
source: src/type_atoms/adt/tuple.rs
expression: "(insta_match_test!(+ parse\n        (Option<Ident>, Option<Punct>, Option<Ident>, Option<Punct>) : hi <\n        >),\n    insta_match_test!(* peek\n        (Option<Ident>, Option<Punct>, Option<Ident>, Option<Punct>) : hi <\n        >))"
---
(
    Ok(
        (
            Some(
                Ident(
                    hi,
                ),
            ),
            Some(
                Punct {
                    char: '<',
                    spacing: Alone,
                },
            ),
            None,
            Some(
                Punct {
                    char: '>',
                    spacing: Alone,
                },
            ),
        ),
    ),
    Some(
        3,
    ),
)
