src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__it_steps_back_for_options.snap
---
source: src/type_atoms/adt/tuple.rs
expression: "(insta_match_test!(+ parse (Option<Ident>, Option<Punct>) : <),\n    insta_match_test!(* peek (Option<Ident>, Option<Punct>) : <))"
---
(
    Ok(
        (
            None,
            Some(
                Punct {
                    char: '<',
                    spacing: Alone,
                },
            ),
        ),
    ),
    Some(
        1,
    ),
)
